@@ -1,3 +1,8 @@
+2005-11-21  Francois Marier  <francois@serioushack.com>
+
+	* src/ShrikeFrame.cpp, src/shaders/Logo.cpp: Warn about missing
+	shmedia files.
+
 2005-10-11  Francois Marier  <francois@serioushack.com>
 
 	* src/ShrikeFrame.cpp: Small Unicode on OSX fix.
